修改了项目名和pom文件的项目名

--- a/beijing-cms/.project
+++ b/beijing-cms/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>beijing-cms</name>
+	<name>beijing-cms-empty</name>
 	<comment></comment>
 	<projects>
 	</projects>
